--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+matplotlib==3.9.3
 numpy==2.1.3
 pandas==2.2.3
 scikit_learn==1.5.2
+seaborn==0.13.2
 sentence_transformers==3.2.1
+wordcloud==1.9.4
